--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <div class="header">
         <img src="https://firebasestorage.googleapis.com/v0/b/mohamaya-user-app.appspot.com/o/Mohamaya-User-App%2Flogo%20(1).svg?alt=media&token=fc8cc600-39d1-4e50-a917-ebcc2ba881b8" alt="Logo">
 
-      <div onclick="openPage('user-porfile.html')">
+      <div onclick="openPage('user-profile.html')">
       <div class="profile-icon">
           <img src="https://firebasestorage.googleapis.com/v0/b/mohamaya-user-app.appspot.com/o/Mohamaya-User-App%2FProfile%20(1).svg?alt=media&token=47795b2d-f525-462b-bf04-9fab88dfd3f5" alt="Profile Icon">
       </div>
